--- a/CSS/index.css
+++ b/CSS/index.css
@@ -30,6 +30,17 @@ nav ul li a{
     text-decoration: none;
     color: white;
 }
+/* sign in button */
+button{
+    width: 60px;
+    height: 20px;
+    border-radius: 4px;
+    border: currentColor;
+}
+button:hover{
+    color: blue;
+
+}
 
 /* Aside customs */
 aside {
